issue #43 fix video cropped bug on fullscreen

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -61,7 +61,7 @@
 .demo-video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 16px;
 }
 .media-container img {
